# App

./: README.md
project/: Cargo.toml  README.md  README2.md  build.sh  eslint.config.js  i.aiexclude  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
project/api/: config.php  confirm-upload.php  db.php  generate-presigned-url.php  log_file.php  setup_database.php
project/documentation/: ADVANCED_ESTIMATION.md  COMMAND_LINE_OPTIONS.md  CUSTOM_ODE_GUIDE.md  DOSING_GUIDE.md  ERROR_MODEL_GUIDE.md  EXAMPLES.md  FIXED_PARAMETERS.md  FIXED_PARAMETERS_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPROVEMENTS_SUMMARY.md  MODEL_COMPARISON_GUIDE.md  MODEL_LIBRARY.md  QUICK_START.md  ROBUST_INITIAL_ESTIMATES.md
project/examples/: compare_models.rs  config_1comp.json  config_2comp.json  config_2comp_ode.json  config_custom_ode_1comp.json  config_custom_ode_2comp.json  config_custom_ode_3comp.json  config_custom_ode_tmdd.json  config_custom_ode_tmdd_qss.json  config_error_additive.json  config_error_combined.json  config_error_proportional.json  config_fixed_parameters.json  config_multiple_dose.json  multiple_dose_sample.csv  one_compartment_sample.csv  two_compartment_sample.csv
project/lib/: db.ts
project/src/: App.tsx  advanced_estimation.rs  colors.rs  comparison.rs  config.rs  dataset.rs  eta_optimizer.rs  fo_estimation.rs  foce_estimation.rs  initial_estimates.rs  main.rs  models.rs  reports.rs  robust_initials.rs  saem.rs  utils.rs  vite-env.d.ts
project/src/Tasker/: TaskContext.tsx  TaskModal.tsx  (+2 more)
(+408 files in other folders)
