[package]
name = "phikl1"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
csv = "1.3"
chrono = "0.4"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"
thiserror = "1.0"
rayon = "1.8"
indexmap = { version = "2.0", features = ["serde"] }
evalexpr = "11.0"

[[bin]]
name = "phikl1"
path = "src/main.rs"
